[Changed] Some API would be use mail to POST
