# docs/swagger.json
@@ -657,8 +657,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User Name",
-                        "name": "username",
+                        "description": "Mail",
+                        "name": "mail",
                         "in": "formData"
                     }
                 ],
@@ -712,8 +712,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User Name",
-                        "name": "username",
+                        "description": "Mail",
+                        "name": "mail",
                         "in": "formData"
                     }
                 ],
@@ -767,8 +767,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User Name",
-                        "name": "username",
+                        "description": "Mail",
+                        "name": "mail",
                         "in": "formData"
                     },
                     {
@@ -828,14 +828,14 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User Name",
-                        "name": "username",
+                        "description": "Mail",
+                        "name": "mail",
                         "in": "formData"
                     },
                     {
                         "type": "string",
                         "description": "OTP Code",
-                        "name": "otp_ode",
+                        "name": "otp_code",
                         "in": "formData"
                     }
                 ],
@@ -1223,8 +1223,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User Name",
-                        "name": "username",
+                        "description": "Mail",
+                        "name": "mail",
                         "in": "formData"
                     }
                 ],
@@ -1278,8 +1278,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User Name",
-                        "name": "username",
+                        "description": "Mail",
+                        "name": "mail",
                         "in": "formData"
                     }
                 ],
@@ -1333,8 +1333,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User Name",
-                        "name": "username",
+                        "description": "Mail",
+                        "name": "mail",
                         "in": "formData"
                     }
                 ],
@@ -1388,8 +1388,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User Name",
-                        "name": "username",
+                        "description": "Mail",
+                        "name": "mail",
                         "in": "formData"
                     },
                     {
@@ -1699,6 +1699,24 @@
                         "type": "string",
                         "description": "e-Mail",
                         "name": "mail",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "First Name",
+                        "name": "first_name",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Last Name",
+                        "name": "last_name",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Phone Number",
+                        "name": "phone_number",
                         "in": "formData"
                     },
                     {
